--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href='//fonts.googleapis.com/css?family=Montserrat:thin,extra-light,light,100,200,300,400,500,600,700,800'
     rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
+  <title>React App Challenge</title>
 </head>
 
 <body>
